# PatchmatchNet

./: .gitignore  LICENSE  README.md  colmap_input.py  colmap_output.py  convert_dtu_dataset.py  convert_eth3d_dataset.py  eval.sh  fusion.py  requirements.txt  sfm.sh  showDepth.py  showPLY.py  test.py  train.py  train.sh  utils.py  visualize_ply.py
SfMlib/: BAUtil.cpp  CMakeLists.txt  FeatureUtils.cpp  SfM.cpp  SfM.h  StereoUtils.cpp  sfmtest.cpp
datasets/: data_io.py  dtu_yao.py  mvs.py
lists/dtu/: all.txt
lists/eth3d/: test.txt  train.txt
lists/tanks/: advanced.txt  intermediate.txt
models/: module.py
